bootstrap-interpreter/test/math.test
===============================================================================
factorial(10)
3628800
===============================================================================
0 ^ 0
1
===============================================================================
0 ^ 1
0
===============================================================================
3 ^ 3
27
===============================================================================
4 ^ 5
1024
===============================================================================
1 ^ -1
1
===============================================================================
-1 ^ -1
-1
===============================================================================
0 ^ -1
\nRuntime error: divide by zero in '/' at prelude.zero line 52 column 15
===============================================================================
2 ^ -1
0
===============================================================================
239 ^ 7
44543599279432079
===============================================================================
- 2 ^ 2
-4
===============================================================================
3 ^ 3 ^ 2
19683
===============================================================================
2 ^ abs(-2)
4
===============================================================================
gcd(1071, 462)
21
===============================================================================
((2 *) ^^ 2 ^^ 2) 1
16
===============================================================================
f(x) := x > 0 ? (+) || (*) \n g(x) := x(9, 5) \n g(f(-1))
45
===============================================================================
f(x) := x > 0 ? ((+) 1) || ((+) 2) \n g(x) := x(5) \n g(f(-1))
7
===============================================================================
(true \/ ! ! ! true) ? 1 || 0
1
===============================================================================
